--- a/home/home.html
+++ b/home/home.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Hireup - Webflow HTML Website Template</title>
+    <title>Home</title>
     <meta
         content="Hireup is a responsive, high-converting, and beautifully designed job board for technology businesses. Bright, vibrant, and easily adapted, it offers the perfect starting point for numerous business types."
         name="description" />
