--- a/AboutUS/AboutUS.html
+++ b/AboutUS/AboutUS.html
@@ -87,8 +87,7 @@
             </div>
             <div data-w-id="3575c869-5e9d-fe78-2156-4b6da71c7f8a"
                 style="-webkit-transform:translate3d(0, 44px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 44px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 44px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 44px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
-                class="about-header-video-wrapper"><a href="#"
-                    class="about-video-lightbox w-inline-block w-lightbox"><img>
+                class="about-header-video-wrapper">
                     <!-- <script type="application/json" class="w-json">{
       "items": [
         {
@@ -395,6 +394,18 @@
         crossorigin="anonymous"></script>
     <script src="https://assets-global.website-files.com/65d3606e983382201a8322da/js/webflow.735d59249.js"
         type="text/javascript"></script>
+        <!-- Start of ChatBot (www.chatbot.com) code -->
+<script type="text/javascript">
+    window._be = window._be || {};
+    window.__be.id = "65d9f6ddb2e91800078fe7a1";
+    (function() {
+        var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
+        be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.chatbot.com/widget/plugin.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
+    })();
+</script>
+<noscript>You need to <a href="https://www.chatbot.com/help/chat-widget/enable-javascript-in-your-browser/" rel="noopener nofollow">enable JavaScript</a> in order to use the AI chatbot tool powered by <a href="https://www.chatbot.com/" rel="noopener nofollow" target="_blank">ChatBot</a></noscript>
+<!-- End of ChatBot code -->
 </body>
 
 </html>
