--- a/LoginPage/LoginPage.html
+++ b/LoginPage/LoginPage.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- This site was created in Webflow. https://www.webflow.com --><!-- Last Published: Sat Feb 24 2024 08:22:02 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="nishants-stunning-site-94e795.webflow.io" data-wf-page="65d3606e983382201a83232e"
     data-wf-site="65d3606e983382201a8322da" lang="en">
 
@@ -37,14 +36,18 @@
             <div class="navigation-left"><a href="/" class="brand w-nav-brand"><img
                         src="https://assets-global.website-files.com/65d3606e983382201a8322da/65d8ad11fa8384d17b4d771b_Imf%20logo.jpg"
                         loading="lazy" width="83" height="Auto" alt="" /></a></div>
-            <div class="navigation-middle">
-                <nav role="navigation" class="nav-menu w-nav-menu"><a href="/" class="nav-link w-nav-link">Home</a><a
-                        href="/about" class="nav-link w-nav-link">About Us</a><a href="/browse"
-                        class="nav-link w-nav-link">Browse</a><a href="/blog" class="nav-link w-nav-link">Articles</a>
-                    <div class="navbar-mobile-button-wrapper"><a href="#" class="button-primary w-button">Login</a>
-                    </div>
-                </nav>
-            </div>
+            <div class="navigation-left"><a href="/" aria-current="page" class="brand w-nav-brand w--current"><img
+                        src="https://assets-global.website-files.com/65d3606e983382201a8322da/65d8ad11fa8384d17b4d771b_Imf%20logo.jpg"
+                        loading="lazy" width="83" height="Auto" alt="" /></a></div>
+                        <div class="navigation-middle">
+                            <nav role="navigation" class="nav-menu w-nav-menu"><a href="../home/home.html" aria-current="page"
+                                    class="nav-link w-nav-link w--current">Home</a><a href="../AboutUS/AboutUS.html"
+                                    class="nav-link w-nav-link">About Us</a><a href="../Browse/Browse.html"
+                                    class="nav-link w-nav-link">Browse</a><a href="../Articles/Articles.html" class="nav-link w-nav-link">Articles</a>
+                                <div class="navbar-mobile-button-wrapper"><a href="../LoginPage/LoginPage.html" class="button-primary w-button">Login</a>
+                                </div>
+                            </nav>
+                        </div>
             <div class="navigation-right">
                 <div class="navigation-button-wrap"><a href="/post-job" class="nav-link w-nav-link">Post a
                         Job</a><button class="button-primary" data-wf-user-logout="Log out" data-wf-user-login="Log in"
